[package]
name = "culprit-derive"
version = "0.1.0"
edition = "2021"
authors = ["Carl Sverre"]
description = "A Rust error crate with the goal of identifying precisely where and in which context an error occurs."
repository = "https://github.com/carlsverre/culprit"
license = "MIT OR Apache-2.0"
keywords = ["error", "result", "try", "context", "derive"]
readme = "README.md"

[dependencies]
